src/App.scss
.mainDiv {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 13%;
  line-height: 3rem;
  font-weight: 600;
  color: #e0d9d9;

  .mainName {
    font-size: 3.5rem;
  }

  .mainBreak {
    font-size: 2rem;
  }

  .mainTitle {
    font-weight: 400;
    font-size: 1.3rem;
  }

  // Main button div
  .mainButtons { 
    padding: 1rem 0rem 1rem 0rem;
      // Actual buttons
    .mainButtonActual {
      margin: 0rem .5rem 0rem .5rem;
    }
  }
  // Icons
  .mainIcon {
    cursor: pointer;
    margin: 0rem 1rem 0rem 1rem;
  }
  
}

// About me page
.ui.active.aboutMeModal {

      .aboutMeImage {
        padding: 2%;
      }
  }

// Modal
.ui.modal {
  top: 5%;
  font-size: 1.3rem;

  // Image in modal
  .ui.image {
    cursor: pointer;
  }
  .mobileResume {
    text-align: center;
    font-weight: 600;
    font-size: 2rem;
    padding: .5rem 0rem;
  }
  #document .document-container.pages{
    margin: 20px;
  }

}

